# baekjoon-recsys

./: .gitignore  Pipfile  README.md  data_downloader.py  pyproject.toml
baekjoon-recsys/data_scripts/: download_problem_info.py  download_solved_problems.py  download_user_info.py
baekjoon-recsys/src/: als_rec_sys.py
bojrecsys/: __init__.py
bojrecsys/models/: collaborative_recsys.pkl  content_recsys.pkl
bojrecsys/pipeline/: __init__.py  data_manager.py  data_preprocessor.py
bojrecsys/recsys/: __init__.py  als_recsys.py  collaborative_recsys.py  content_recsys.py  item_recsys.py  latent_factor_recsys.py  recsys.py  tfidf_recsys.py
bojrecsys/utils/: __init__.py  checker.py  dumper.py  loader.py  path.py
data/KAIST/: 070370  20210805  Diuven  USER_INFO  WeissBlume  a3626a  acskr  ahgus89  alphahoon  apiacere  asd142513  b0sgun  bangjh0430  battlekjh  blackkarn  bombard1004  bomul1128  books1234  candykjw0316  chase1028  chase_eagles  chawheel0221  chichi  choisang0826  cmkang8128  coconutpie28  cubeyoung  dayforday  dbase  ddw02141  dglee2007  dnfzja1213  dylon133  eunje1111  fqqwet  gabulflash  gauss148  gbstinyhippo  geokim365  glory20h  (+93 more)
data/preprocessed/: user_info.csv
data_scripts/: data_downloader.py  data_preprocessor.py  preprocess_data.py
scripts/: download.py  fit.py  fit_and_dump.py  fit_and_recommend.py  preprocess.py  recommend.py
src/: als_model.py  app.py  collaborative_model.py  contents_based_model.py  model.py  rec_sys.py
tests/: data_manager_test.py  mock_requests.py  mock_requests_const.py  test_path.py
web/: app.py
(+52454 files in other folders)
