[tool.poetry]
name = "bojrecsys"
version = "0.1.0"
description = ""
authors = ["joshua5301 <junha5301@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
gensim = "^4.3.2"
implicit = "^0.7.2"
soynlp = "^0.0.493"
scipy = "<1.13"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.36.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
